--- a/src/App.css
+++ b/src/App.css
@@ -353,8 +353,8 @@ p a{
 .download{
   width:100%;
   height:max-content;
-  padding:50px 50px 50px 0;
-  background: #dc3545;
+  padding:50px 50px 50px 50px;
+  background: #6f42c1;
 }
 .download h2,
 .download p{
@@ -457,7 +457,7 @@ input[type=text]{
   padding:30px 30px 30px 30px;
 }
 .about-mission{
-  width:50%;
+  width:60%;
   height: max-content;
   text-align: center;
   padding-bottom: 50px;
@@ -486,7 +486,7 @@ input[type=text]{
   border-radius:12px;
   padding:30px 70px 30px 70px;
   box-shadow:5px 8px 8px #dfdddd; 
-  background-color: #20c997;
+  background-color: #6f42c1;
 }
 .form{
   width:100%;
@@ -501,7 +501,6 @@ input[type=text]{
   display:flex;
   justify-content: center;
   align-items: center;
-  background-color: #0d6efd;
 }
 .form img{
   width:90%;
@@ -512,7 +511,6 @@ input[type=text]{
   width:50%;
   height:50%;
   padding: 170px 20px 170px 20px;
-  background: #20c997;
   text-align: center;
   line-height: 30px;
 }
@@ -529,26 +527,41 @@ input[type=text]{
   display:flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  padding:40px 40px 40px 40px;
+  background-color: #6f42c1;
 }
 .news{
-  width:60%;
+  width:70%;
   height:max-content;
   text-align: center;
   padding:40px 40px 40px 40px;
-  background-color: #0d6efd;
 }
 .news p{
   margin-bottom: 20px;
 }
+.sub{
+  width:100%;
+  height:fit-content;
+  display:flex;
+  flex-direction: row;
+}
 input[type=email]{
   width:100%;
   height: 40px;
-  border-radius: 15px;
   padding-left: 15px;
   font-size: 12px;
   border:2px solid #ced4da;
 }
+input[type="submit"]{
+  width:15%;
+  height: 40px;
+  font-size: 14px;
+  text-align: center;
+  border:2px solid #ced4da;
+  color:#fff;
+  background: #000000;
+}
+
 
 
 
@@ -565,6 +578,11 @@ input[type=email]{
   .box .text{
     margin-top: -30px;
     padding-bottom: 20px;
+  }
+
+  /* About Page */
+  .belief-box{
+    padding:30px 30px 30px 30px;
   }
 }
 @media only screen and (max-width: 966px) {
@@ -649,11 +667,12 @@ input[type=email]{
     width:100%;
     height:30vh;
     margin-left:0px;
+    margin-top:50px;
     padding-bottom: 50px;
   }
   .navbar-signin,
   .navbar-signup{
-    margin-right:400px;
+    margin-right:500px;
     margin-bottom: 20px;
   }
 
@@ -746,7 +765,54 @@ input[type=email]{
     width:60%;
   }
   
+
+  /* About Page */
+  .about-img img{
+    width: 60%;
+    height:60%;
+  }
+  .about-section{
+    padding:60px 0px 10px 0px;
+  }
+  .about-mission{
+    width:80%;
+  }
+  .goal{
+    width:100%;
+    height:max-content;
+    display:flex;
+    flex-direction: column;
+    padding:20px 20px 40px 20px;
+  }
+  .belief{
+    width:60%;
+    margin-right:0px;
+    padding-top: 60px;
+  }
+  .form{
+    width:100%;
+    margin-top: 100px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .form img{
+    width:70%;
+    height:70%;
+  }
+  .form .img .formpg{
+    width:50%;
+    height:50%;
+    padding: 80px 20px 50px 20px;
+    margin-bottom:100px;
+    text-align: center;
+    line-height: 30px;
+  }
+  .news{
+    padding:40px 0px 40px 0px;
+  }
 }
+
 @media only screen and (max-width: 745px){
   .home-txt{
     padding:50px 10px 0 10px;
@@ -807,8 +873,8 @@ input[type=email]{
     display: flex;
   }
   .offer img{
-    width:80%;
-    height:80%;
+    width:100%;
+    height:100%;
   }
   .offer-description{
     width:100%;
@@ -821,14 +887,42 @@ input[type=email]{
   .box .text{
     margin-top: 0px;
   }
+  /* About Page */
+  .form .img .formpg{
+    width:80%;
+    height:80%;
+  }
+  input[type=email]{
+    width:80%;
+    height: 35px;
+  }
+  input[type="submit"]{
+    width:20%;
+    height: 35px;
+  }
 }
 @media only screen and (max-width: 470px){
 
   h2{
     font-size: 24px;
   }
-
-
+  .body{
+    padding-top:60px;
+  }
+  .navigation{
+    height:10vh;
+  }
+  .navbar-brand{
+    padding:6px 10px;
+  }
+  .close,
+  .open{
+    font-size: 22px;
+    top:20px;
+  }
+  .navigation .navbar-list .nav-links-mobile{
+    top: 60px;
+  }
   .home-txt{
     padding:50px 10px 0 10px;
   }
@@ -839,6 +933,21 @@ input[type=email]{
   .txt2{
     font-size: 18px;
     text-align: left;
+  }
+  .home-btn{
+    display: flex;
+    align-items: left;
+    justify-content: left;
+
+  }
+  .download-btn{
+    display: flex;
+    align-items: left;
+    justify-content: left;
+  }
+  .home-signup{
+    height: 55px;
+    width:180px;
   }
   .security-img{
     width:100%;
@@ -878,5 +987,38 @@ input[type=email]{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  /* About Page */
+  .about-img img{
+    width: 80%;
+    height:80%;
+  }
+  .goal{
+    width:100%;
+    height:max-content;
+    display:flex;
+    flex-direction: column;
+    padding:20px 20px 40px 20px;
+  }
+  .belief{
+    width:80%;
+  }
+  .form{
+    width:100%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .form img{
+    width:100%;
+    height:100%;
+  }
+  .form .img .formpg{
+    width:100%;
+    height:100%;
+  }
+  .fill{
+    padding:40px 0px 40px 0px;
   }
 }
