--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ p a{
   opacity: 1;
 }
 .navbar-brand{
-  width:20%;
+  width:15%;
   height:12vh;
   padding:10px 13px;
 }
@@ -112,10 +112,10 @@ p a{
   font-size: 18px;
 }
 .nav-link{
-  color:#2d2d33;
+  color:#000000;
 }
 .nav-link:hover{
-  color:#000000;
+  color:#8d8d92;
 }
 
 .navbar-btn{
@@ -481,9 +481,12 @@ input[type=text]{
   height:max-content;
   margin-right:50px;
 }
-.belief h2,
+.belief h2{
+   text-align: center;
+}
 .belief p{
   text-align: center;
+  color:#fff;
 }
 .belief-box{
   width:100%;
@@ -568,8 +571,50 @@ input[type="submit"]{
 }
 
 
-
-
+/* Contact Page */
+.contact-hero{
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  height:max-content;
+}
+.contact-text{
+  width:50%;
+  height:max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 70px 40px 40px 40px;
+}
+.description{
+  width:80%;
+  height:max-content;
+  padding: 20px 100px 20px 40px;
+}
+.description h2{
+  color:#5eac6b;
+}
+.description .link{
+  padding-top:20px;
+  display: flex;
+  flex-direction: column;
+  line-height: 30px;
+}
+.description .link a{
+  color:#5eac6b;
+}
+.description .link a:hover{
+  text-decoration: underline;
+}
+.contact-img{
+  width:50%;
+  height:max-content;
+  padding: 50px 40px 40px 0px;
+}
+.contact-img img{
+  width:80%;
+  height:80%;
+}
 
 
 /* Responsiveness of the Site */
@@ -669,15 +714,15 @@ input[type="submit"]{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width:100%;
     height:30vh;
+    width:100%;
     margin-left:0px;
     margin-top:50px;
     padding-bottom: 50px;
   }
   .navbar-signin,
   .navbar-signup{
-    margin-right:500px;
+    margin-right:430px;
     margin-bottom: 20px;
   }
 
@@ -845,8 +890,8 @@ input[type="submit"]{
     display: flex;
   }
   .security img{
-    width:50%;
-    height:50%;
+    width:30%;
+    height:30%;
   }
   .security-description{
     width:100%;
@@ -923,7 +968,9 @@ input[type="submit"]{
   .navigation{
     height:10vh;
   }
- 
+ .navbar-con{
+  height:10vh;
+ }
   .navigation .navbar-list .nav-links-mobile{
     top: 60px;
   }
@@ -942,7 +989,6 @@ input[type="submit"]{
     display: flex;
     align-items: left;
     justify-content: left;
-
   }
   .download-btn{
     display: flex;
@@ -951,7 +997,7 @@ input[type="submit"]{
   }
   .home-signup{
     height: 55px;
-    width:180px;
+    width:170px;
   }
   .security-img{
     width:100%;
@@ -979,6 +1025,11 @@ input[type="submit"]{
     width:100%;
     text-align: left;
     padding:30px 20px 20px 20px;
+  }
+  .box{
+    width:100%;
+    height:70vh;
+    padding: 0px 10px 50px 10px;
   }
   .box .text{
     margin-top: -30px;
@@ -1009,7 +1060,7 @@ input[type="submit"]{
     padding:20px 20px 40px 20px;
   }
   .belief{
-    width:80%;
+    width:90%;
   }
   .form{
     width:100%;
