--- a/src/App.css
+++ b/src/App.css
@@ -617,6 +617,21 @@ input[type="submit"]{
 }
 
 
+
+/* Blog Page */
+.blog-head{
+  width:100%;
+  height:20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6699ff;
+}
+.blog-text{
+  width:100%;
+  text-align: center;
+}
+
 /* Responsiveness of the Site */
 @media only screen and (max-width: 1150px) {
   .txt1{
@@ -633,6 +648,11 @@ input[type="submit"]{
   /* About Page */
   .belief-box{
     padding:30px 30px 30px 30px;
+  }
+
+  /* Contact Page */
+  .description{
+    padding: 20px 10px 20px 40px;
   }
 }
 @media only screen and (max-width: 966px) {
@@ -867,6 +887,39 @@ input[type="submit"]{
   .news{
     padding:40px 0px 40px 0px;
   }
+
+
+
+/* Contact Page */
+.contact-hero{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+  }
+.contact-text{
+  width:100%;
+  height:max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 70px 40px 40px 40px;
+  }
+.description{
+  width:80%;
+  height:max-content;
+  padding: 20px 100px 20px 40px;
+  text-align: center;
+  }
+.contact-img{
+  width:100%;
+  display:flex;
+  justify-content: center;
+  padding: 50px 0px 40px 0px;
+  }
+.contact-img img{
+  width:70%;
+  height:70%;
+  }
 }
 
 @media only screen and (max-width: 745px){
@@ -955,6 +1008,15 @@ input[type="submit"]{
   input[type="submit"]{
     width:20%;
     height: 35px;
+  }
+  /* Contact Page */
+  .contact-text{
+    padding:20px 20px 20px 10px;
+  }
+  .description{
+    width:80%;
+    height:max-content;
+    padding: 20px 0px 20px 0px;
   }
 }
 @media only screen and (max-width: 470px){
