--- a/src/App.css
+++ b/src/App.css
@@ -7,58 +7,6 @@
   font-family: Arial, Helvetica, sans-serif;
 
 }
-:root {
-  --bs-blue: #0d6efd;
-  --bs-indigo: #6610f2;
-  --bs-purple: #6f42c1;
-  --bs-pink: #d63384;
-  --bs-red: #dc3545;
-  --bs-orange: #fd7e14;
-  --bs-yellow: #ffc107;
-  --bs-green: #198754;
-  --bs-teal: #20c997;
-  --bs-cyan: #0dcaf0;
-  --bs-white: #fff;
-  --bs-gray: #6c757d;
-  --bs-gray-dark: #343a40;
-  --bs-gray-100: #f8f9fa;
-  --bs-gray-200: #e9ecef;
-  --bs-gray-300: #dee2e6;
-  --bs-gray-400: #ced4da;
-  --bs-gray-500: #adb5bd;
-  --bs-gray-600: #6c757d;
-  --bs-gray-700: #495057;
-  --bs-gray-800: #343a40;
-  --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
-  --bs-success: #198754;
-  --bs-info: #0dcaf0;
-  --bs-warning: #ffc107;
-  --bs-danger: #dc3545;
-  --bs-light: #f8f9fa;
-  --bs-dark: #212529;
-  --bs-primary-rgb: 13,110,253;
-  --bs-secondary-rgb: 108,117,125;
-  --bs-success-rgb: 25,135,84;
-  --bs-info-rgb: 13,202,240;
-  --bs-warning-rgb: 255,193,7;
-  --bs-danger-rgb: 220,53,69;
-  --bs-light-rgb: 248,249,250;
-  --bs-dark-rgb: 33,37,41;
-  --bs-white-rgb: 255,255,255;
-  --bs-black-rgb: 0,0,0;
-  --bs-body-color-rgb: 33,37,41;
-  --bs-body-bg-rgb: 255,255,255;
-  --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: var(--bs-font-sans-serif);
-  --bs-body-font-size: 1rem;
-  --bs-body-font-weight: 400;
-  --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
-}
 h2{
   font-size:35px;
   color: #212529;
@@ -122,10 +70,9 @@ p a{
   display: flex;
   width:70%;
   height:12vh;
-  margin-left:15px;
+  margin-left:480px;
   margin-right: 15px;
   padding-top:18px;
-  padding-left: 450px;
 }
 .navbar-signin{
   height: 40px;
@@ -619,7 +566,7 @@ input[type="submit"]{
 
 
 /* Blog Page */
-.blog-head{
+/* .blog-head{
   width:100%;
   height:20vh;
   display: flex;
@@ -630,7 +577,7 @@ input[type="submit"]{
 .blog-text{
   width:100%;
   text-align: center;
-}
+} */
 
 /* Responsiveness of the Site */
 @media only screen and (max-width: 1150px) {
@@ -736,7 +683,7 @@ input[type="submit"]{
     align-items: center;
     height:30vh;
     width:100%;
-    margin-left:0px;
+    margin-left:240px;
     margin-top:50px;
     padding-bottom: 50px;
   }
