--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,4 +1,4 @@
-/* .homepage{
+.homepage{
     width:100%;
     height:max-content;
     display:flex;
@@ -268,4 +268,4 @@
     width:7%;
     height:100vh;
     background: rgb(224, 223, 223);
-} */
+}
